welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: type mismatch;
 found   : Int(20)
 required: Boolean
	if ( 10<a<20 && b>20 || 10<a<20 && b<10 || 10<b<20 && a>20 || 10<b<20 && a<10){
                  ^